# CQUT-Router

./: .gitignore  README.md
1g/: README.md
1g1/: README.md
1g1/nk/: nk4conf.sh
2g1/: README.md
2g1/k2/基础内置/: README.md
2g1/newifi3/基础内置/: README.md
2g1/nk/: .nk4conf.sh.swp  nk4conf.sh
files/root/: install.sh  nk  nk.sh  nk4  nk4.sh  nk4conf.sh  nkconf.sh
netkeeper开发/nk/: CMakeLists.txt
netkeeper开发/startNetkeeper/: CMakeLists.txt
